# hdx-scraper-whosonfirst

./: .gitignore  Dockerfile  README.md  dataset_dates.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  whosonfirst.py
.github/workflows/: publish.yaml  run-python-script.yaml
config/: hdx_dataset_static.yaml  project_configuration.yaml
src/hdx/scraper/whosonfirst/: __main__.py  whosonfirst.py
src/hdx/scraper/whosonfirst/config/: hdx_dataset_static.yaml
tests/: conftest.py  test_whosonfirst.py
tests/fixtures/: shapefile-inventory.json
tests/fixtures/input/: shapefile-inventory.json
