#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-whosonfirst"
requires-python = ">=3.12"
dependencies = [
    "hdx-python-api>= 6.6.5",
    "hdx-python-country>= 4.1.1",
    "hdx-python-utilities>= 4.0.8",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.whosonfirst.__main__:main"
